PyAMF Changelog
===============

This file contains information about the changes between the different versions
of PyAMF.

0.4.0 (unreleased)
------------------
 - flex.ArrayCollection now subclasses list instead of dict as non-int keys are
   not allowed. IList interface has been implemented. (Ticket:359)
 - Encoding registered subclass of list that define the 'externalised' metadata
   will be encoded as an object. 
 - Encoders how have a 'strict' mode. Not generally useful for the time being
   but will help with developments in the future. Type mapped functions now
   require a second 'encoder' attribute. (Ticket:376)
 - Added support for __slots__. (Ticket:347)
 - ByteArray now does not throw an error when used in the Remoting framework
   (Ticket:379)
 - A new adapter that converts sets.ImmutableSet and sets.Set to tuples before
   encoding. (Ticket:280)
 - A revamped google app engine adapter that checks for the _key attribute in
   an aliased class and first loads the object from the datastore and then
   applies that properties in the object stream. (Ticket:307)
 - New helper function to make it easier to manually add adapters (Ticket:350)
 - Python C-extension for the pyamf.util.BufferedByteStream class. Contributed
   by Gerard Escalante (Ticket:225)
 - New API to add headers such as cookies in pyamf.remoting.client (Ticket:337)
 - Now clearing the context between remoting requests (Ticket:309)
 - Fixed issue with AMF3 class definition references (Ticket:341)
 - More helpful description for register_class args check (Ticket:334)
 - pyamf.register_class now checks to ensure that __init__ args do not have
   any arguments (Ticket:322)
 - Added RemoteObject support for AsyncMessage (Ticket:292)
 - Both Encoders will now raise pyamf.EncodeError if a function is encoded
   (Ticket:311)
 - Twisted Gateway would fall over when returning tuples (Ticket:313)
 - The remoting gateways now send a customizable Server header (Ticket:317)