@@ -43,10 +43,12 @@ class ContextTestCase(_util.ClassCacheClearingTestCase):
         self.assertEquals(c.objects, [])
         self.assertEquals(c.classes, [])
         self.assertEquals(c.legacy_xml, [])
+        self.assertEquals(c.object_aliases, [])
         self.assertEquals(len(c.strings), 0)
         self.assertEquals(len(c.classes), 0)
         self.assertEquals(len(c.objects), 0)
         self.assertEquals(len(c.legacy_xml), 0)
+        self.assertEquals(len(c.object_aliases), 0)
 
     def test_add_object(self):
         x = amf3.Context()
@@ -81,6 +83,24 @@ class ContextTestCase(_util.ClassCacheClearingTestCase):
         self.assertEquals(x.addLegacyXML(y), 0)
         self.assertTrue(y in x.legacy_xml)
         self.assertEquals(len(x.legacy_xml), 1)
+
+    def test_set_object_alias(self):
+        x = amf3.Context()
+        obj = {'label': 'original'}
+        alias = {'label': 'aliased'}
+        
+        x.setObjectAlias(obj, alias)
+        self.assertEquals(len(x.object_aliases), 1)
+
+    def test_get_object_alias(self):
+        x = amf3.Context()
+        obj = {'label': 'original'}
+        alias = {'label': 'aliased'}
+
+        x.setObjectAlias(obj, alias)
+        self.assertEquals(alias, x.getObjectAlias(obj))
+        self.assertEquals('aliased', x.getObjectAlias(obj)['label'])
+        self.assertRaises(pyamf.ReferenceError, x.getObjectAlias, object())
 
     def test_clear(self):
         x = amf3.Context()
@@ -404,6 +424,17 @@ class EncoderTestCase(_util.ClassCacheClearingTestCase):
         self._run([
             ([0, 1, 2, 3], '\x09\x09\x01\x04\x00\x04\x01\x04\x02\x04\x03')])
 
+    def test_default_proxy_flag(self):
+        amf3.use_proxies_default = True
+        encoder = amf3.Encoder(self.buf, context=self.context)
+        self.assertTrue(encoder.use_proxies)
+        amf3.use_proxies_default = False
+
+    def test_list_proxy(self):
+        self.encoder.use_proxies = True
+        self._run([
+            ([0, 1, 2, 3], '\n\x07Cflex.messaging.io.ArrayCollection\t\t\x01\x04\x00\x04\x01\x04\x02\x04\x03')])
+
     def test_list_references(self):
         y = [0, 1, 2, 3]
 
@@ -411,6 +442,14 @@ class EncoderTestCase(_util.ClassCacheClearingTestCase):
             (y, '\x09\x09\x01\x04\x00\x04\x01\x04\x02\x04\x03'),
             (y, '\x09\x00'),
             (y, '\x09\x00')])
+
+    def test_list_proxy_references(self):
+        self.encoder.use_proxies = True
+        y = [0, 1, 2, 3]
+        self._run([
+            (y, '\n\x07Cflex.messaging.io.ArrayCollection\t\t\x01\x04\x00\x04\x01\x04\x02\x04\x03'),
+            (y, '\n\x00'),
+            (y, '\n\x00')])
 
     def test_dict(self):
         self._run([
@@ -959,6 +998,14 @@ class DecoderTestCase(_util.ClassCacheClearingTestCase):
         self.assertEquals(foo.given_name, 'Jane')
         self.assertEquals(self.buf.remaining(), 0)
 
+    def test_default_proxy_flag(self):
+        amf3.use_proxies_default = True
+        decoder = amf3.Decoder(self.buf, context=self.context)
+        self.assertTrue(decoder.use_proxies)
+        amf3.use_proxies_default = False
+        decoder = amf3.Decoder(self.buf, context=self.context)
+        self.assertFalse(decoder.use_proxies)
+
 class ObjectEncodingTestCase(_util.ClassCacheClearingTestCase):
     def setUp(self):
         _util.ClassCacheClearingTestCase.setUp(self)
@@ -1250,6 +1297,21 @@ class DataOutputTestCase(unittest.TestCase):
         # string
         x.writeObject(obj, False)
         self.assertEquals(self.stream.getvalue(), '\t\x01\x00\x06\x02\x01')
+
+    def test_object_proxy(self):
+        self.encoder.use_proxies = True
+        x = amf3.DataOutput(self.encoder)
+        obj = pyamf.MixedArray(spam='eggs')
+
+        x.writeObject(obj)
+        self.assertEquals(self.stream.getvalue(),
+            '\n\x07;flex.messaging.io.ObjectProxy\n\x0b\x01\tspam\x06\teggs\x01')
+        self.stream.truncate()
+
+        # check references
+        x.writeObject(obj)
+        self.assertEquals(self.stream.getvalue(), '\n\x00')
+        self.stream.truncate()
 
     def test_short(self):
         x = amf3.DataOutput(self.encoder)
